# subxt

./: Cargo.toml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/commands/: codegen.rs  compatibility.rs
codegen/: Cargo.toml
codegen/src/api/: calls.rs  constants.rs  events.rs  mod.rs  storage.rs
codegen/src/types/: composite_def.rs  mod.rs  type_def.rs  type_path.rs
examples/: Cargo.toml
integration-tests/: Cargo.toml
macro/: Cargo.toml
metadata/: Cargo.toml
metadata/src/: lib.rs
subxt/: Cargo.toml
subxt/src/: error.rs  lib.rs
subxt/src/backend/: mod.rs
subxt/src/backend/legacy/: mod.rs
subxt/src/backend/unstable/: mod.rs
subxt/src/config/: mod.rs
subxt/src/constants/: constants_client.rs
subxt/src/events/: events_type.rs
subxt/src/metadata/: decode_with_metadata.rs  metadata_type.rs
subxt/src/storage/: storage_address.rs  storage_client.rs
test-runtime/: Cargo.toml
testing/integration-tests/: Cargo.toml
testing/test-runtime/: Cargo.toml
testing/ui-tests/: Cargo.toml
testing/wasm-tests/: Cargo.toml
