[package]
name = "test-runtime"
version = "0.20.0"
edition = "2021"

[dependencies]
subxt = { path = "../subxt" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

[build-dependencies]
subxt = { path = "../subxt" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
which = "4.2.2"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
